# sldl

./: pyproject.toml
hw1/: housing_5cities_testa.csv  housing_5cities_train.csv  hw1_v1-stu.ipynb  report.ipynb
hw2/: hw2_v4_stu.ipynb  mbav1.pickle  report.html  report.ipynb
hw3/: .gitignore  report.html  report.ipynb
miniproject-1/: ml.ipynb  ml2.ipynb  report.html  report.ipynb  y_pred-54536d37-6897-433e-8141-1a5c26aceec0.csv  y_pred-5f2338dd-e43b-44a3-88c3-dd2040b538f7.csv  y_pred-895fcf83-7eae-4a8f-ad0e-b3bbafaf5f51.csv  y_pred-d0190b82-a016-4cc6-abd1-6ce88a6ff953.csv  y_pred-nyr-81f8d621-a6b6-4ecc-9dd5-94e75930650b.csv  y_pred-rf-605a7a5b-b981-4124-8227-531c6fccdf25.csv  y_pred-rf-6deeae57-4219-4159-b332-a8a9c82f86e9.csv  y_pred-rf-8b5ad0bc-c7fe-4d33-bf55-31abe6615778.csv  y_pred-rf-pro-8fed4da4-6493-4858-9ee8-da3dfb0b5c15.csv  y_pred-rf-pro-9355b3c9-3ed6-4598-9fe4-649db593a684.csv  y_pred-rf-pro-c3846097-8d8f-4d97-aa23-717d2440123a.csv  y_pred-rf-pro-f69f94a6-9e2d-4b26-84d3-554235c065d5.csv  y_pred-super_rf-c3b4d9be-ac4a-4f98-89a7-a8bc04e61c91.csv  y_pred-super_rf-f2a3a563-543a-4917-9a4f-2095b0d14f16.csv  y_pred-super_svm-c0e9e79d-2873-4492-bc0d-0d806f2d071f.csv  y_pred-svm-01d33dc2-dd41-4a4c-b00f-87c4ac388bbd.csv  y_pred-svm-1091f71f-dacb-4a1f-abfd-84b2a2c899c5.csv  y_pred-svm-19c10af0-9adc-48d1-a5db-ac3acf740f75.csv  y_pred-svm-459c41aa-0b29-4c45-97e9-6db694e74903.csv  y_pred-svm-4d0309a2-517f-4eea-8383-f8bf0d5d46e8.csv  y_pred-svm-b2494c87-796e-44e4-81eb-cb007315617f.csv  y_pred-svm-cd34d53c-c914-4c16-a4f7-78f0323ef920.csv
miniproject-2/: tiny-vla.ipynb  (+3 more)
(+3 files in other folders)
