[tool.poetry]
name = "sldl"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
