[tool.poetry]
name = "sldl"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
